got leaderbord to slice and sort, but still showing as objects.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <ul id="answerlist"></ul>
 
-        <ol id="highscorelist"></ol>
+        <ul id="highscorelist"></ul>
 
         <p id="responder"></p>
 
