fixed start button bug on high score screen

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
     <button type="button" id="startbutton">Start Quiz</button>
     <button id="highscorebutton" type="button">Highscores</button>
-    <p id="timerdisplay">Timer: &ThinSpace;</p>
+    <p id="timerdisplay">&ThinSpace; Good Luck! &ThinSpace;</p>
 </header>
 
 <!--Display main content in center of page-->
