Better spacing for score entry form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!--answer options go in answerlist div, answer check response goes into response p - intro-p hidden on startQuiz-->
             <p id="intro-p">Welcome to the JavaScript Fundamentals Quiz Challenge!<br />
-                Answer the questions as quickly as possible. You have 60 seconds to finish the quiz<br />
+                Answer the questions as quickly as possible. You have 60 seconds to finish the quiz.<br />
                 If you answer a question incorrectly, you will lose 5 seconds.<br />
                 The quiz will end once you've answered every question, or the time has run out!<br />
                 Good Luck!</p>
@@ -41,8 +41,8 @@
         <p id="responder"></p>
 
         <form id="scoreform">
-            <label>Save High Score!</label><br>
-            <input type="text" id="initials" placeholder="Initial here" required><br>
+            <label>Save High Score!</label><br />
+            <input type="text" id="initials" placeholder="Initial here" required><br />
             <input id="submit" type="submit" value="submit">
           </form> 
 
