--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
 <!--Display link for high score in top left, and timer in top right-->
 <header>
+    <button type="button" id="retry">Retry?</button>
     <button type="button" id="startbutton">Start Quiz</button>
     <button id="highscorebutton" type="button">Highscores</button>
     <p id="timerdisplay">&ThinSpace; Good Luck! &ThinSpace;</p>
